hadrian: Add no_split_sections tranformer
This transformer reverts the effect of `split_sections`, which we intend
to use for platforms which don't support split sections.

In order to achieve this we have to modify the implemntation of the
split_sections transformer to store whether we are enabling
split_sections directly in the `Flavour` definition. This is because
otherwise there's no convenient way to turn off split_sections due to
having to pass additional linker scripts when merging objects.

(cherry picked from commit fec6638e2468c78f136f2363d8b3239a9bfd4f91)

--- a/hadrian/hadrian.cabal
+++ b/hadrian/hadrian.cabal
@@ -112,6 +112,7 @@ executable hadrian
                        , Settings.Builders.Ld
                        , Settings.Builders.Make
                        , Settings.Builders.MergeObjects
+                       , Settings.Builders.SplitSections
                        , Settings.Builders.RunTest
                        , Settings.Builders.Win32Tarballs
                        , Settings.Builders.Xelatex
