Don't write o-boot files in Interactive mode
We should not be producing object files when in interactive mode but we
still produced the dummy o-boot files. These never made it into a
`Linkable` but then confused the recompilation checker.

Fixes #22669

(cherry picked from commit 6469fea7c78408db679898168a8e9c50c8c7c5ce)

--- a/testsuite/tests/driver/Makefile
+++ b/testsuite/tests/driver/Makefile
@@ -757,4 +757,10 @@ T22044:
 	# Test the file exists and is preprocessed
 	"$(TEST_HC)" $(TEST_HC_OPTS) -v0 T22044.hs
 
+.PHONY: T22669
+T22669:
+	echo ":q" | "$(TEST_HC)" $(TEST_HC_OPTS) -v0 --interactive T22669
+	! test -f T22669.o-boot
+
+
 
