--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -574,6 +574,7 @@ library
                sm/MBlock.c
                sm/MarkWeak.c
                sm/NonMoving.c
+               sm/NonMovingAllocate.c
                sm/NonMovingCensus.c
                sm/NonMovingMark.c
                sm/NonMovingScav.c
