nonmoving: Move allocator into new source file
(cherry picked from commit e6f7b809885609de9e647e7f96cc95929fde7a4a)

--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -577,6 +577,7 @@ library
                sm/MBlock.c
                sm/MarkWeak.c
                sm/NonMoving.c
+               sm/NonMovingAllocate.c
                sm/NonMovingCensus.c
                sm/NonMovingMark.c
                sm/NonMovingScav.c
