rts: Don't rely on EXTERN_INLINE for slop-zeroing logic
Previously we relied on calling EXTERN_INLINE functions defined in
ClosureMacros.h from Cmm to zero slop. However, as far as I can tell,
this is no longer safe to do in C99 as EXTERN_INLINE definitions may be emitted
in each compilation unit.

Fix this by explicitly declaring a new set of non-inline functions in
ZeroSlop.c which can be called from Cmm and marking the ClosureMacros.h
definitions as INLINE_HEADER.

In the future we should try to eliminate EXTERN_INLINE.

(cherry picked from commit c6ec4cd1a94a1b76b7b094d5c92ee605031ecf60)

--- a/rts/rts.cabal.in
+++ b/rts/rts.cabal.in
@@ -540,6 +540,7 @@ library
                TraverseHeapTest.c
                WSDeque.c
                Weak.c
+               ZeroSlop.c
                eventlog/EventLog.c
                eventlog/EventLogWriter.c
                hooks/FlagDefaults.c
