Use SArr in demand analysis
Add `SArr`, a wrapper around `Exts.SmallArray#`, and use it in the `Prod` constructor of `SubDemand`. This is #18927.

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -384,6 +384,7 @@ Library
         GHC.Data.Maybe
         GHC.Data.OrdList
         GHC.Data.Pair
+        GHC.Data.SArr
         GHC.Data.SmallArray
         GHC.Data.Stream
         GHC.Data.Strict
